BIGINT周りの問題を解決
